2018-10-30  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.8-alpha03 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.8-alpha03: Tony\'nDonna';git push
	git tag -a 4.7.8-alpha03 -m 'ncremap --d2f;ncks byte-swap ordering option;ncbo conformity clarity';git push --tags

	* Add variable uint32_var to in_grp.nc and successfully test byte-swapping

	* Fix c_typ_nm() to return correct C-language type of netCDF type based on nco_typ.h tokens

	* Clarify dimension ordering issue when ncbo's variable conformity checks fail

2018-10-24  Charlie Zender  <zender@uci.edu>

	* Finish byte-swap function. Still need front-end option invocation mechanism.

2018-10-23  Charlie Zender  <zender@uci.edu>

	* Add byte-swap option infrastructure

	* Successfully built/tested on GCC 8.2 on MacOS 10.14

2018-10-11  Charlie Zender  <zender@uci.edu>

	* Fix typo so we have NCO_GSL_VERSION >= 110 in fmc_gsl_cls.cc

2018-10-06  Charlie Zender  <zender@uci.edu>

	* Pedro Vicente corrected a WIN64 size_t issue by replacing “long” with “size_t” in nco_lmt_evl_dmn_crd()

2018-09-27  Charlie Zender  <zender@uci.edu>

	* Add --d2f option to ncremap to convert double-precision to single-precision

2018-09-25  Charlie Zender  <zender@uci.edu>

	* NCO 4.7.8-alpha02 release procedure:
	cd ~/nco;git commit -a -m 'Version 4.7.8-alpha02: Imua MVB';git push
	git tag -a 4.7.8-alpha02 -m 'Deprecate USE_NC4_SRD_WORKAROUND for netCDF >= 4.6.2;Add nc_*_memio() functions; Fix nc_set_log_level(); ncatted allow --typ_mch searches to fail; ncremap add mss_val to NC_FLOAT';git push --tags

	* ncremap add missing values to single-precision MPAS variables as well as double

	* ncatted do not return error when -t specified and no matching	variables found

2018-09-23  Charlie Zender  <zender@uci.edu>

	* Define NC_LIB_VERSION prior to using in #include <netcdf_mem.h>

	* Add nco_create_memio(), nco_open_memio(), nco_close_memio() and their stubs

2018-09-21  Charlie Zender  <zender@uci.edu>
