@@ -1,3 +1,9 @@
+2018-11-04  Charlie Zender  <zender@uci.edu>
+
+	* Use htonl(), htons() instead of __builtin_bswap??() when unavailable
+
+	* Add frac_b exceedance diagnostic
+
 2018-10-30  Charlie Zender  <zender@uci.edu>
 
 	* NCO 4.7.8-alpha03 release procedure:
